Bug 148846 - TOC: Character fill for tabulation is wrong at opening
Summary: TOC: Character fill for tabulation is wrong at opening
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-04-29 11:23 UTC by phv
Modified: 2022-06-02 13:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison shows the fill character is the wrong one in the dev version. (74.21 KB, image/png)
2022-04-29 11:23 UTC, phv
Details
Test document with table of content and fill character (13.27 KB, application/vnd.oasis.opendocument.text)
2022-04-29 11:24 UTC, phv
Details
Persistent issue in safe mode (809.52 KB, image/jpeg)
2022-05-17 09:50 UTC, phv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description phv 2022-04-29 11:23:26 UTC
Created attachment 179841 [details]
Comparison shows the fill character is the wrong one in the dev version.

A bug was recently added in the dev version of LibreOffice and the tab fill character for a table of content is no longer applied when opening a document.

Steps to Reproduce:
    1) Create a Writer document with at least one heading and a table of content.
    2) Format the table of content entry so the tabulation is using a dot with spacing ( ․ ), the fifth choice from the top in the fill character list.
    3) Save and reload the document.

Actual Result: The table of content displays what looks like an optional hyphen mark character.

Expected Results: The table of content should display the dot character.

    4) Update indexes and tables. The table of content now displays the correct fill character.

Also if you saved again the document without updating the table of content, the wrong character replaces the correct one in all LibreOffice versions.

The Writer document in attachment allows to experiment this bug when opened in the last LibreOfficeDev version.
Comment 1 phv 2022-04-29 11:24:45 UTC
Created attachment 179842 [details]
Test document with table of content and fill character
Comment 2 Dieter 2022-05-13 06:51:54 UTC
I can't confirm with

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 83d0f2eebae41d431d9a5bfd1a918523977752d0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 3 phv 2022-05-17 09:24:26 UTC
I still have this bug in the latest version of LibreOfficeDev. I uninstalled the previous version (alpha 0), installed the latest one (alpha 1), and did a safe boot. Result: the tab characters in the table of contents are not the ones that were defined.

This bug is recent, and even though I can't exclude that the issue comes from my side, I find it peculiar that it appeared so unexpectedly after an update of the dev version.
Comment 4 phv 2022-05-17 09:50:13 UTC
Created attachment 180148 [details]
Persistent issue in safe mode

This happens only with the last three characters proposed in the "Fill character" list. I tried with different fonts, unchecking the alignment options, but the issue persists. Updating the table of contents makes the right characters appear, the issue is when the document is loaded for the first time.
Comment 5 raal 2022-05-18 20:59:58 UTC
Confirm with Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 75f7e057039aaa49558e22d18cad651d11589da9
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 6 raal 2022-05-18 21:05:10 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin; Could you possibly take a look at this one?
Thanks
 3aebb65457ff94cc7d693f621e630c060176ae3b is the first bad commit
commit 3aebb65457ff94cc7d693f621e630c060176ae3b
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Apr 20 10:44:15 2022 +0200

    source 8e4453c2117b6c3bb15be6b949a0a8a43df66647

https://git.libreoffice.org/core/+/8e4453c2117b6c3bb15be6b949a0a8a43df66647
  use more FastAttributeIter::toView
Comment 7 phv 2022-05-21 10:18:55 UTC
Thanks for having took the time to check this bug. Could we change the status to "confirmed" to speed up its processing? Thank you.
Comment 8 Dieter 2022-05-21 11:19:46 UTC
(In reply to phv from comment #7)
> Thanks for having took the time to check this bug. Could we change the
> status to "confirmed" to speed up its processing? Thank you.

NEW = CONFIRMED
Comment 9 Commit Notification 2022-06-02 13:39:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b1a4d2a49a47cd8b457b8c704134c0f1beaa9210

tdf#148846 TOC: Character fill for tabulation is wrong

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.