tdf#148846 TOC: Character fill for tabulation is wrong

regression from
    commit 8e4453c2117b6c3bb15be6b949a0a8a43df66647
    use more FastAttributeIter::toView

Change-Id: I510716d2e4c5535faefb3afb658827cca9b6c4fa